force-app/main/default/objects/Insertion__c/Insertion__c.object-meta.xml
<CustomObject>
    <label>Insertion</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insertions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>