force-app/main/default/objects/Insertion__c/fields/AdresaID__c.field-meta.xml
<CustomField>
    <fullName>AdresaID__c</fullName>
    <externalId>true</externalId>
    <label>ID Adrésa</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>