force-app/main/default/objects/Insertion__c/fields/Annonceur__c.field-meta.xml
<CustomField>
    <fullName>Annonceur__c</fullName>
    <description>Utilisé en reporting</description>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Annonceur</label>
    <type>Text</type>
</CustomField>