force-app/main/default/objects/Insertion__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>Utilisé pour le reporting</description>
    <formula>IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBCAPTIF&quot;), &quot;Non Alimentaire&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBRP&quot;), &quot;Régie Physique&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBHORSCAPTIF&quot;), &quot;Hors Captif&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBALIMENTAIR&quot;), &quot;Alimentaire&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBPART&quot;), &quot;Cashback Webloyalty&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBPROG&quot;), &quot;AdEx&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBNIP&quot;), &quot;NIP&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBAUTRES&quot;), &quot;Autres&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBCLAB&quot;), &quot;CLAB&quot;,
IF( ISPICKVAL(Opportunity__r.BU__c, &quot;ESPPUBW2S&quot;), &quot;WEB TO STORE&quot;,
&quot;&quot;

))))))))))</formula>
    <label>BU</label>
    <type>Text</type>
</CustomField>