force-app/main/default/objects/Insertion__c/fields/CampaignNumber__c.field-meta.xml
<CustomField>
    <fullName>CampaignNumber__c</fullName>
    <externalId>true</externalId>
    <label>Numéro de campagne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>