force-app/main/default/objects/Insertion__c/fields/canDelete__c.field-meta.xml
<CustomField>
    <fullName>canDelete__c</fullName>
    <formula>TEXT(Status__c) != &quot;OI facturé&quot;
&amp;&amp; TEXT(Status__c) != &quot;OI clôturé&quot;</formula>
    <label>canDelete</label>
    <type>Checkbox</type>
</CustomField>