force-app/main/default/objects/Insertion__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Utilisé pour le reporting</description>
    <formula>TEXT( Product__r.Category__c )</formula>
    <label>Catégorie</label>
    <type>Text</type>
</CustomField>