force-app/main/default/objects/Insertion__c/fields/Free__c.field-meta.xml
<CustomField>
    <fullName>Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offert</label>
    <type>Checkbox</type>
</CustomField>