force-app/main/default/objects/Insertion__c/fields/Mandataire_payeur__c.field-meta.xml
<CustomField>
    <fullName>Mandataire_payeur__c</fullName>
    <description>Utilisé en reporting</description>
    <formula>IF( 
 ISPICKVAL( Opportunity__r.InvoicedAccount__c , &quot;Agence&quot; ),  
 Opportunity__r.Agency__r.Name ,
 Opportunity__r.Account.Name 
)</formula>
    <label>Mandataire payeur</label>
    <type>Text</type>
</CustomField>