force-app/main/default/objects/Insertion__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <description>Utilisé en reporting</description>
    <formula>TEXT( Product__r.Medium__c )</formula>
    <label>Support</label>
    <type>Text</type>
</CustomField>