force-app/main/default/objects/Insertion__c/fields/Montant_TTC__c.field-meta.xml
<CustomField>
    <fullName>Montant_TTC__c</fullName>
    <description>Utilisé pour le reporting</description>
    <formula>Revenue_Net__c + VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant TTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>