force-app/main/default/objects/Insertion__c/fields/NewInsertion__c.field-meta.xml
<CustomField>
    <fullName>NewInsertion__c</fullName>
    <formula>IF( 
CreatedById = Opportunity__r.Owner.Id , 
false, true
)</formula>
    <label>Insertion manuelle</label>
    <type>Checkbox</type>
</CustomField>