force-app/main/default/objects/Insertion__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insertions</relationshipLabel>
    <relationshipName>Insertions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>