force-app/main/default/objects/Insertion__c/fields/OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre éligible</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Insertions</relationshipLabel>
    <relationshipName>Insertions</relationshipName>
    <type>Lookup</type>
</CustomField>