force-app/main/default/objects/Insertion__c/fields/OrderReference__c.field-meta.xml
<CustomField>
    <fullName>OrderReference__c</fullName>
    <label>Réf. Bon de commande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>