force-app/main/default/objects/Insertion__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ne pas mettre de filtres sur ce champ &gt; bug quand passage en OI signé</description>
    <label>Produit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Produit d&apos;opération</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Insertions</relationshipLabel>
    <relationshipName>Insertions</relationshipName>
    <type>Lookup</type>
</CustomField>