force-app/main/default/objects/Insertion__c/fields/produit_commercial__c.field-meta.xml
<CustomField>
    <fullName>produit_commercial__c</fullName>
    <formula>Product__r.RecordType.DeveloperName = &quot;SalesProduct&quot;</formula>
    <label>produit commercial ?</label>
    <type>Checkbox</type>
</CustomField>