force-app/main/default/objects/Insertion__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Utilisé pour le reporting</description>
    <formula>Product__r.Rate__c</formula>
    <label>Taux Régie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>