force-app/main/default/objects/Insertion__c/fields/Revenue_Net__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Net__c</fullName>
    <description>Utilisé en reporting</description>
    <formula>Revenue__c -  Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>