force-app/main/default/objects/Insertion__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OI facturé</fullName>
            </value>
            <value>
                <fullName>Clôturé</fullName>
            </value>
            <value>
                <fullName>Signé</fullName>
            </value>
            <value>
                <fullName>Signé/contrôlé</fullName>
            </value>
            <value>
                <fullName>OI signé/contrôlé</fullName>
            </value>
            <value>
                <fullName>OI clôturé</fullName>
            </value>
            <value>
                <fullName>OI signé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>