force-app/main/default/objects/Insertion__c/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <description>Utilisé pour le reporting</description>
    <formula>TEXT( Product__r.Targeting__c )</formula>
    <label>Ciblage</label>
    <type>Text</type>
</CustomField>