force-app/main/default/objects/Insertion__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Utilisé pour le reporting</description>
    <formula>TEXT( Product__r.Type__c )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>