force-app/main/default/objects/Insertion__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>IF( ISPICKVAL( Opportunity__r.InvoicedAccount__c , &quot;Agence&quot;), Opportunity__r.Agency__r.VATpercent__c *  Revenue_Net__c,
IF( ISPICKVAL( Opportunity__r.InvoicedAccount__c , &quot;Annonceur&quot;), Opportunity__r.Account.VATpercent__c *  Revenue_Net__c,
NULL
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>