force-app/main/default/objects/Insertion__c/fields/WeightedExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>WeightedExpectedRevenue__c</fullName>
    <formula>ExpectedRevenue__c * Opportunity__r.Probability</formula>
    <label>CA prévisionnel pondéré</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>