force-app/main/default/objects/Insertion__c/validationRules/New_item_same_month.validationRule-meta.xml
<ValidationRule>
    <fullName>New_item_same_month</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
MONTH( StartDate__c ) = MONTH( EndDate__c ) &amp;&amp;
YEAR( StartDate__c ) = YEAR( EndDate__c )
)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>Les mois de la Date de début et Date de fin doivent être identiques</errorMessage>
</ValidationRule>