force-app/main/default/objects/Insertion__c/validationRules/OO_CampaignNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>OO_CampaignNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Opportunity__r.RecordType.DeveloperName = &quot;Open_Order&quot;,
 ISPICKVAL( Opportunity__r.InvoicingLevel__c , &quot;Campagne&quot;),
 NOT( ISPICKVAL( Product__r.Type__c , &quot;Régule&quot;)),
 ISBLANK( CampaignNumber__c )
)</errorConditionFormula>
    <errorDisplayField>CampaignNumber__c</errorDisplayField>
    <errorMessage>Vous devez renseigner un numéro de campagne</errorMessage>
</ValidationRule>