force-app/main/default/objects/Insertion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Annonceur__c</columns>
    <columns>Sales_OI__c</columns>
    <columns>Status__c</columns>
    <columns>Product__c</columns>
    <columns>Revenue__c</columns>
    <columns>Volume__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>AdresaID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>