force-app/main/default/objects/Insertion__c/listViews/Insertions_cl_turer.listView-meta.xml
<ListView>
    <fullName>Insertions_cl_turer</fullName>
    <columns>NAME</columns>
    <columns>Annonceur__c</columns>
    <columns>Sales_OI__c</columns>
    <columns>Status__c</columns>
    <columns>Product__c</columns>
    <columns>Revenue__c</columns>
    <columns>Volume__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>OI signé,OI signé/contrôlé</value>
    </filters>
    <filters>
        <field>StartDate__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Insertions du mois précédent à clôturer</label>
</ListView>